--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Value Information</title>
+    <title>Value Information - セール情報</title>
     <style>
         body {
             background-color: #000000;
@@ -17,31 +17,32 @@
             max-width: 800px;
             margin: 0 auto;
         }
-        .site-name {
-            font-size: 1.2rem;
-            font-weight: bold;
-            text-align: center;
-            margin-bottom: 10px;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-        }
-        h1 {
-            font-size: 1.8rem;
+        header {
             text-align: center;
             border-bottom: 2px solid #ffd700;
-            padding-bottom: 15px;
-            margin-bottom: 40px;
+            padding-bottom: 10px;
+            margin-bottom: 30px;
         }
-        .card {
-            background-color: #111111;
+        .site-name {
+            font-size: 1.2rem;
+            letter-spacing: 0.1em;
+            text-transform: uppercase;
+        }
+        h1 {
+            font-size: 1.5rem;
+            margin: 10px 0;
+        }
+        .product-card {
+            background-color: #1a1a1a;
             border: 1px solid #ffd700;
             border-radius: 10px;
             padding: 25px;
             margin-bottom: 30px;
             box-shadow: 0 4px 15px rgba(255, 215, 0, 0.1);
         }
-        h2 {
+        .product-title {
             font-size: 1.4rem;
+            font-weight: bold;
             margin-top: 0;
             margin-bottom: 15px;
             border-left: 4px solid #ffd700;
@@ -50,14 +51,14 @@
         .benefit {
             font-size: 1.1rem;
             font-weight: bold;
-            margin-bottom: 15px;
             color: #ffffff;
+            margin-bottom: 10px;
         }
         .reason {
             font-size: 0.95rem;
             margin-bottom: 20px;
         }
-        .button-group {
+        .button-container {
             display: flex;
             gap: 15px;
             flex-wrap: wrap;
@@ -66,77 +67,61 @@
             flex: 1;
             min-width: 150px;
             text-align: center;
-            padding: 12px;
+            padding: 12px 0;
             text-decoration: none;
             font-weight: bold;
             border-radius: 5px;
-            transition: all 0.3s ease;
-            font-size: 0.9rem;
+            transition: opacity 0.3s;
         }
         .btn-amazon {
             background-color: #ffd700;
-            color: #000;
+            color: #000000;
         }
         .btn-rakuten {
-            border: 1px solid #ffd700;
+            background-color: #000000;
             color: #ffd700;
-            background-color: transparent;
+            border: 1px solid #ffd700;
         }
         .btn:hover {
             opacity: 0.8;
-            transform: translateY(-2px);
-        }
-        @media (max-width: 600px) {
-            h1 { font-size: 1.4rem; }
-            h2 { font-size: 1.2rem; }
         }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <div class="site-name">Value Information</div>
-    <h1>【楽天市場・Amazon】2026年2月25日 12時の超お得なセール品！</h1>
+    <header>
+        <div class="site-name">Value Information</div>
+        <h1>【楽天市場・Amazon】2026年2月25日 13時の超お得なセール品！</h1>
+    </header>
 
-    <!-- 商品1 -->
-    <div class="card">
-        <h2>【45%OFF】次世代完全ワイヤレスイヤホン SonicPro X1</h2>
-        <p class="benefit">雑踏のノイズを完全に消し去り、瞬時に静寂と至高の音楽空間へ没入する。</p>
-        <p class="reason">
-            春の新作発表を控えた在庫一掃セールにより、過去最安値を大幅に更新する驚異のプライスが実現しました。<br>
-            この価格で手に入るのは24時間限定となっており、今を逃すと数万円の損と言っても過言ではありません。
-        </p>
-        <div class="button-group">
-            <a href="#" class="btn btn-amazon">Amazonで詳細を見る</a>
-            <a href="#" class="btn btn-rakuten">楽天市場で詳細を見る</a>
+    <div class="product-card">
+        <h2 class="product-title">【45%OFF】次世代フラッグシップスマホ Pro Max 2026</h2>
+        <p class="benefit">一瞬の閃きを逃さない、プロ級のクリエイティビティをその手に。</p>
+        <p class="reason">最新モデルが市場最安値を更新。本日13時からのタイムセール限定価格です。<br>ポイント還元を含めると実質半額以下となるため、買い替えは今しかありません。</p>
+        <div class="button-container">
+            <a href="#" class="btn btn-amazon">Amazonで見る</a>
+            <a href="#" class="btn btn-rakuten">楽天市場で見る</a>
         </div>
     </div>
 
-    <!-- 商品2 -->
-    <div class="card">
-        <h2>【ポイント20倍】超薄型 14インチ 4K有機ELモバイルモニター</h2>
-        <p class="benefit">カフェの狭いテーブルが、プロフェッショナルな多画面オフィスへと変貌する。</p>
-        <p class="reason">
-            テレワーク需要のピークアウトに伴う特別還元祭により、実質価格が市場相場を大きく下回っています。<br>
-            楽天ポイントの大幅還元とAmazonのクーポンが重複するこのタイミングこそ、機動力を高める絶好の機会です。
-        </p>
-        <div class="button-group">
-            <a href="#" class="btn btn-amazon">Amazonで詳細を見る</a>
-            <a href="#" class="btn btn-rakuten">楽天市場で詳細を見る</a>
+    <div class="product-card">
+        <h2 class="product-title">【ポイント20倍】超軽量 8K モバイルディスプレイ</h2>
+        <p class="benefit">カフェのテーブルが、瞬時に最高効率のクリエイティブスタジオへ変わる。</p>
+        <p class="reason">期間限定のポイント大幅アップにより、普段のセールを上回る実質価格を実現。<br>リモートワーク需要で在庫が激減しているため、即断即決が推奨される逸品です。</p>
+        <div class="button-container">
+            <a href="#" class="btn btn-amazon">Amazonで見る</a>
+            <a href="#" class="btn btn-rakuten">楽天市場で見る</a>
         </div>
     </div>
 
-    <!-- 商品3 -->
-    <div class="card">
-        <h2>【30%OFF】大容量20000mAh 140W出力対応モバイルバッテリー</h2>
-        <p class="benefit">バッテリー残量の不安から解放され、どこにいてもフルスピードで作業を完結させる。</p>
-        <p class="reason">
-            最新の急速充電規格に対応したフラッグシップモデルが、タイムセール祭りの目玉商品としてラインナップされました。<br>
-            PCも充電可能な高出力をこの価格で手に入れられる機会は、半年に一度あるかないかの希少なチャンスです。
-        </p>
-        <div class="button-group">
-            <a href="#" class="btn btn-amazon">Amazonで詳細を見る</a>
-            <a href="#" class="btn btn-rakuten">楽天市場で詳細を見る</a>
+    <div class="product-card">
+        <h2 class="product-title">【30%OFF】ノイズキャンセリング搭載 プレミアムヘッドホン</h2>
+        <p class="benefit">周囲の雑音を魔法のように消し去り、極上の音楽体験に深く没入する。</p>
+        <p class="reason">これまで値引きのなかった新色が、数時間限定のフラッシュセール対象に浮上。<br>音質に妥協したくないユーザーから注文が殺到しており、完売必至の状況です。</p>
+        <div class="button-container">
+            <a href="#" class="btn btn-amazon">Amazonで見る</a>
+            <a href="#" class="btn btn-rakuten">楽天市場で見る</a>
         </div>
     </div>
 </div>
