--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Value Information</title>
+    <title>Value Information - 超お得セール情報</title>
     <style>
         body {
             background-color: #000000;
             color: #ffd700;
-            font-family: 'Helvetica Neue', Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
+            font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', Meiryo, sans-serif;
             margin: 0;
             padding: 20px;
             line-height: 1.6;
@@ -17,46 +17,45 @@
             max-width: 800px;
             margin: 0 auto;
         }
+        header {
+            text-align: center;
+            margin-bottom: 40px;
+            border-bottom: 2px solid #ffd700;
+            padding-bottom: 20px;
+        }
         .site-name {
             font-size: 1.2rem;
-            font-weight: bold;
-            text-transform: uppercase;
             letter-spacing: 2px;
-            border-bottom: 1px solid #ffd700;
-            display: inline-block;
-            margin-bottom: 10px;
+            text-transform: uppercase;
         }
         h1 {
             font-size: 1.8rem;
-            text-align: center;
-            margin: 40px 0;
-            padding: 10px;
-            border: 2px solid #ffd700;
-            border-radius: 5px;
+            margin-top: 10px;
         }
-        .card {
+        .product-card {
             background-color: #111111;
-            border: 1px solid #333;
-            border-left: 5px solid #ffd700;
+            border: 1px solid #ffd700;
             border-radius: 8px;
             padding: 25px;
-            margin-bottom: 40px;
+            margin-bottom: 30px;
             box-shadow: 0 4px 15px rgba(255, 215, 0, 0.1);
         }
         h2 {
-            font-size: 1.4rem;
+            font-size: 1.5rem;
             margin-top: 0;
-            color: #ffd700;
+            border-left: 4px solid #ffd700;
+            padding-left: 15px;
         }
         .benefit {
-            font-size: 1.1rem;
+            font-size: 1.2rem;
             font-weight: bold;
             margin-bottom: 15px;
             color: #ffffff;
         }
         .reason {
-            font-size: 0.95rem;
-            margin-bottom: 20px;
+            font-size: 1rem;
+            margin-bottom: 25px;
+            color: #cccccc;
         }
         .button-container {
             display: flex;
@@ -65,80 +64,94 @@
         }
         .btn {
             flex: 1;
-            min-width: 150px;
+            min-width: 200px;
             padding: 12px 20px;
             text-align: center;
             text-decoration: none;
             font-weight: bold;
-            border-radius: 5px;
-            transition: opacity 0.3s;
-        }
-        .btn:hover {
-            opacity: 0.8;
+            border-radius: 4px;
+            transition: all 0.3s ease;
+            text-transform: uppercase;
         }
         .btn-amazon {
-            background-color: #ff9900;
+            background-color: #ffd700;
             color: #000000;
+            border: 1px solid #ffd700;
+        }
+        .btn-amazon:hover {
+            background-color: #000000;
+            color: #ffd700;
         }
         .btn-rakuten {
-            background-color: #bf0000;
-            color: #ffffff;
+            background-color: transparent;
+            color: #ffd700;
+            border: 1px solid #ffd700;
         }
-        @media (max-width: 600px) {
-            h1 { font-size: 1.4rem; }
-            h2 { font-size: 1.2rem; }
+        .btn-rakuten:hover {
+            background-color: #ffd700;
+            color: #000000;
+        }
+        footer {
+            text-align: center;
+            font-size: 0.8rem;
+            margin-top: 50px;
+            color: #666;
         }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <div class="site-name">Value Information</div>
-    
-    <h1>【楽天市場・Amazon】2026年2月25日 15時の超お得なセール品！</h1>
+    <header>
+        <div class="site-name">Value Information</div>
+        <h1>【楽天市場・Amazon】2026年2月25日 16時の超お得なセール品！</h1>
+    </header>
 
-    <!-- 商品1 -->
-    <div class="card">
-        <h2>【35%OFF】次世代ノイズキャンセリング・ヘッドホン Pro X1</h2>
-        <p class="benefit">雑踏の騒音を完全に消し去り、アーティストと同じ空間で音楽を浴びる。</p>
+    <!-- 商品カード 1 -->
+    <article class="product-card">
+        <h2>【35%OFF】次世代ノイズキャンセリングヘッドホン Pro Silence Gen-3</h2>
+        <p class="benefit">騒音を消し去り、あらゆる場所をあなた専用の極上コンサートホールへ。</p>
         <p class="reason">
-            メーカー決算セールにより、発売以来初めて3万円の壁を突破する歴史的安値を記録しました。<br>
-            この価格での在庫は極少数のため、数時間以内に完売することが予想されます。
+            過去12ヶ月で最安値を更新。この価格での放出は在庫限りとなっており、<br>
+            次回のセール予定は未定のため、今手に入れるのが最も賢明な選択です。
         </p>
         <div class="button-container">
             <a href="#" class="btn btn-amazon">Amazonでチェック</a>
             <a href="#" class="btn btn-rakuten">楽天市場でチェック</a>
         </div>
-    </div>
+    </article>
 
-    <!-- 商品2 -->
-    <div class="card">
-        <h2>【ポイント15倍】超高精細4Kモバイルモニター 15.6インチ</h2>
-        <p class="benefit">カフェの狭いテーブルが、一瞬でデュアルディスプレイの最強ワークスペースに変わる。</p>
+    <!-- 商品カード 2 -->
+    <article class="product-card">
+        <h2>【20%ポイント還元】ウルトラワイド・クリエイティブモニター 34インチ</h2>
+        <p class="benefit">広大な視界が思考の制限を解き放ち、クリエイティブの生産性を劇的に加速させる。</p>
         <p class="reason">
-            現在実施中のタイムセールに加え、本日のポイント還元率が通常時の15倍まで跳ね上がっています。<br>
-            実質価格で見ると、並行輸入品よりも安く国内正規品を手に入れる絶好のタイミングです。
+            楽天ポイント大幅アップキャンペーンと重なる今、実質価格が驚異的な安さに。<br>
+            リモートワーク環境をアップグレードするなら、このタイミングを逃す手はありません。
         </p>
         <div class="button-container">
             <a href="#" class="btn btn-amazon">Amazonでチェック</a>
             <a href="#" class="btn btn-rakuten">楽天市場でチェック</a>
         </div>
-    </div>
+    </article>
 
-    <!-- 商品3 -->
-    <div class="card">
-        <h2>【50%OFF】超小型・大容量 高速充電モバイルバッテリー</h2>
-        <p class="benefit">バッテリー残量の不安を過去のものにし、自由な旅と移動を手に入れる。</p>
+    <!-- 商品カード 3 -->
+    <article class="product-card">
+        <h2>【40%OFF】スマートウォッチ Elite Health Tracker</h2>
+        <p class="benefit">24時間、専属コーチがあなたのパフォーマンスを管理し、最高のコンディションを維持する。</p>
         <p class="reason">
-            新モデル発表に伴う在庫処分のため、半額以下という驚異的な割引率が設定されています。<br>
-            日常の利便性を劇的に高めるガジェットを、ランチ1回分の差額で購入できる今がチャンスです。
+            型落ちではなく最新モデルが数量限定のタイムセールに登場しました。<br>
+            Amazonのクーポン適用を合わせると、通常より1万円以上安く購入可能です。
         </p>
         <div class="button-container">
             <a href="#" class="btn btn-amazon">Amazonでチェック</a>
             <a href="#" class="btn btn-rakuten">楽天市場でチェック</a>
         </div>
-    </div>
+    </article>
 
+    <footer>
+        &copy; 2026 Value Information. All rights reserved.
+    </footer>
 </div>
 
 </body>
