--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Value Information</title>
+    <title>Value Information - 超お得セール情報</title>
     <style>
         body {
             background-color: #000000;
@@ -12,106 +12,129 @@
             margin: 0;
             padding: 20px;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
+            align-items: center;
         }
-        .container {
-            max-width: 800px;
-            width: 100%;
-        }
+
         .site-name {
             font-size: 1.2rem;
-            font-weight: bold;
+            letter-spacing: 0.2rem;
             margin-bottom: 10px;
             text-transform: uppercase;
-            letter-spacing: 2px;
         }
+
         h1 {
             font-size: 1.8rem;
+            text-align: center;
             border-bottom: 2px solid #ffd700;
             padding-bottom: 10px;
-            margin-bottom: 30px;
+            margin-bottom: 40px;
+            max-width: 800px;
         }
-        .card {
+
+        .product-card {
             background-color: #0a0a0a;
             border: 1px solid #ffd700;
             border-radius: 12px;
-            padding: 25px;
-            box-shadow: 0 4px 20px rgba(255, 215, 0, 0.15);
-            transition: transform 0.3s ease;
+            padding: 30px;
+            margin-bottom: 30px;
+            max-width: 600px;
+            width: 100%;
+            box-shadow: 0 4px 15px rgba(255, 215, 0, 0.1);
         }
-        .card:hover {
-            transform: translateY(-5px);
-        }
+
         .product-title {
-            font-size: 1.5rem;
+            font-size: 1.4rem;
             font-weight: bold;
-            margin-top: 0;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
             line-height: 1.4;
         }
+
         .benefit {
             font-size: 1.1rem;
             font-weight: bold;
             margin-bottom: 15px;
             display: block;
         }
+
         .reason {
             font-size: 0.95rem;
             line-height: 1.6;
+            color: #ffffff;
             margin-bottom: 25px;
-            color: #f0e68c; /* 少し落ち着いた金系 */
         }
-        .button-group {
+
+        .button-container {
             display: flex;
             gap: 15px;
             flex-wrap: wrap;
         }
+
         .btn {
             flex: 1;
-            min-width: 200px;
-            padding: 12px 20px;
+            min-width: 140px;
             text-align: center;
+            padding: 12px 20px;
             text-decoration: none;
             font-weight: bold;
-            border-radius: 8px;
-            transition: opacity 0.3s;
+            border-radius: 6px;
+            transition: transform 0.2s, background-color 0.2s;
         }
+
         .btn-amazon {
             background-color: #ffd700;
-            color: #000000;
+            color: #000;
         }
+
         .btn-rakuten {
             background-color: transparent;
             color: #ffd700;
-            border: 2px solid #ffd700;
+            border: 1px solid #ffd700;
         }
+
         .btn:hover {
-            opacity: 0.8;
+            transform: translateY(-2px);
+            opacity: 0.9;
+        }
+
+        @media (max-width: 480px) {
+            h1 { font-size: 1.4rem; }
+            .product-title { font-size: 1.2rem; }
         }
     </style>
 </head>
 <body>
 
-<div class="container">
     <div class="site-name">Value Information</div>
-    <h1>【楽天市場・Amazon】2026年2月25日 17時の超お得なセール品！</h1>
+    <h1>【楽天市場・Amazon】2026年2月25日 18時の超お得なセール品！</h1>
 
-    <div class="card">
-        <div class="product-title">【45%OFF】究極の没入感。次世代ノイズキャンセリングヘッドホン SoundMaster Elite v3</div>
-        
-        <span class="benefit">騒音を消し去り、自分だけの静寂を。</span>
-        
+    <!-- 商品カード 1 -->
+    <div class="product-card">
+        <div class="product-title">【45%OFF】究極の没入感！次世代ノイズキャンセリングヘッドホン Elite X</div>
+        <span class="benefit">騒音を消し去り、一瞬で自分だけのプライベートシアターを創り出す。</span>
         <p class="reason">
-            過去最安値を大幅に更新した今、最高峰の音響体験を半額近い価格で手に入れる絶好のチャンスです。<br>
-            このタイムセールは数時間で終了が予想されるため、後悔する前に確保することを強く推奨します。
+            過去最安値を更新した今、Amazonの在庫が急速に減少しており、この価格での販売は数時間以内には終了する見込みです。<br>
+            楽天ではポイント20倍キャンペーンが同時開催されており、実質半額以下で手に入る千載一遇のチャンスとなっています。
         </p>
-
-        <div class="button-group">
-            <a href="#" class="btn btn-amazon">Amazonセール会場へ</a>
-            <a href="#" class="btn btn-rakuten">楽天市場でポイント確認</a>
+        <div class="button-container">
+            <a href="#" class="btn btn-amazon">Amazonで見る</a>
+            <a href="#" class="btn btn-rakuten">楽天市場で見る</a>
         </div>
     </div>
-</div>
+
+    <!-- 商品カード 2 -->
+    <div class="product-card">
+        <div class="product-title">【ポイント15倍】スマートライフを加速させる！最新フラッグシップタブレット Pro 11</div>
+        <span class="benefit">重いPCを持ち歩く日々から解放され、どこでもクリエイティブな時間を謳歌する。</span>
+        <p class="reason">
+            春の新生活応援セールの一環として、楽天の特定店舗でのみ限定ポイント還元が極限まで引き上げられています。<br>
+            Amazonでは特設クーポンが発行されており、他店を寄せ付けない圧倒的な価格競争力が実現している今が「買い」です。
+        </p>
+        <div class="button-container">
+            <a href="#" class="btn btn-amazon">Amazonで見る</a>
+            <a href="#" class="btn btn-rakuten">楽天市場で見る</a>
+        </div>
+    </div>
 
 </body>
 </html>
